# rs-worktime

./: Cargo.toml  README.md
src/: long_duration.rs  main.rs  numbers.rs  output.rs  status.rs
